# api/src/server/services/v1/me.ts
@@ -1,6 +1,6 @@
 import * as UserUsecase from "features/users/UserUsecase";
 import * as ProjectUsecase from "features/projects/ProjectUsecase";
-import { Me } from "types/api";
+import { Me, Projects } from "types/api";
 
 /**
  * GET /v1/me
@@ -23,4 +23,19 @@ export async function getProjects(sessionID: string): Promise<Me.GetMyPersonalPr
 	const user = await UserUsecase.findAuthorizedUser(sessionID);
 	const projects = await ProjectUsecase.findAllMyPersonal(user);
 	return projects.map(ProjectUsecase.toResponse);
+}
+
+/**
+ * POST /v1/projects
+ * create new project
+ * @param sessionID sessionID
+ * @param input プロジェクト作成に必要なデータ
+ * @returns 作成されたプロジェクト
+ */
+export async function postProjects(sessionID: string, input: Projects.CreateProject.RequestBody): Promise<Projects.CreateProject.ResponseBody> {
+	const accessLevel = ProjectUsecase.convertAccessLevel(input.accessLevel);
+	const type = ProjectUsecase.convertType(input.type);
+	const user = await UserUsecase.findAuthorizedUser(sessionID);
+	const project = await ProjectUsecase.create(user, input.name, input.description, accessLevel, type);
+	return ProjectUsecase.toResponse(project);
 }
